--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionStrings": "Data Source=DESKTOP-7RCKNKQ;Initial Catalog=EcommerceDb;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+  },
   "AllowedHosts": "*"
 }
